# EvalLedger

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  render.yaml
.github/: dependabot.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  fly.toml  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20260401_0001_initial_schema.py  20260402_0002_hardening_baseline.py  20260403_0003_oauth_identities.py  20260403_0004_benchmark_review_fields.py  20260405_0005_performance_indexes.py  20260406_0006_keyhash_index_and_types.py  20260407_0007_contamination_report_uniqueness.py  20260408_0008_user_deleted_at.py  20260409_0009_abuse_reports.py
backend/app/: __init__.py  config.py  database.py  dependencies.py  errors.py  idempotency.py  logging.py  main.py  metrics.py  ratelimit.py  security.py
backend/app/models/: __init__.py  api_key.py  audit.py  benchmark.py  contamination.py  report.py  user.py  user_identity.py  version.py
backend/app/routers/: __init__.py  admin.py  auth.py  benchmarks.py  contamination.py  oauth.py  reports.py  search.py  stats.py  versions.py
backend/app/schemas/: admin.py  audit.py  auth.py  benchmark.py  common.py  contamination.py  report.py  version.py
backend/app/scripts/: check_artifacts.py  check_restore.py  db_backup.py  loadtest.py  seed.py
backend/app/services/: account.py  audit.py  contamination_engine.py  corpus_index.py  oauth.py  provenance.py  query_projections.py  storage.py  versioning.py
backend/app/tasks/: contamination_tasks.py
backend/app/utils/: hashing.py  minhash.py  uploads.py
backend/tests/: conftest.py  test_account.py  test_admin.py  test_api_guards.py  test_config.py  test_contamination_engine.py  test_idempotency.py  test_integration.py  test_oauth.py  test_observability.py  test_observability_features.py  test_performance.py  test_ratelimit.py  test_recovery.py  test_reports.py  test_storage.py  test_upload_validation.py  test_version_submission.py
cli/: README.md  pyproject.toml
cli/evalledger/: client.py  config.py  main.py
cli/evalledger/commands/: check.py  info.py  login.py  search.py  submit.py  verify.py
cli/tests/: test_cli.py
docs/: README.md
frontend/: .env.example  .gitignore  next.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.tsbuildinfo  vitest.config.ts
standard/: METADATA_STANDARD.md  metadata_schema.json
(+65 files in other folders)
