[project]
name = "evalledger-backend"
version = "0.1.0"
description = "FastAPI backend for EvalLedger"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiofiles>=24.1.0",
  "alembic>=1.16.0",
  "asyncpg>=0.30.0",
  "boto3>=1.39.0",
  "celery[redis]>=5.5.0",
  "datasketch>=1.6.5",
  "email-validator>=2.2.0",
  "fastapi>=0.116.0",
  "greenlet>=3.2.0",
  "httpx>=0.28.0",
  "orjson>=3.11.0",
  "prometheus-client>=0.20.0",
  "bcrypt>=4.0.0",
  "psycopg[binary]>=3.2.0",
  "pyarrow>=20.0.0",
  "pydantic-settings>=2.10.0",
  "pyjwt>=2.10.0",
  "python-json-logger>=3.3.0",
  "python-multipart>=0.0.20",
  "redis>=6.0.0",
  "semver>=3.0.4",
  "sqlalchemy>=2.0.41",
  "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
  "anyio>=4.10.0",
  "mypy>=1.17.0",
  "pytest>=8.4.0",
  "pytest-asyncio>=1.1.0",
  "pytest-cov>=6.2.0",
  "ruff>=0.12.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "ASYNC", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/versions"]

[[tool.mypy.overrides]]
module = [
  "aiofiles",
  "boto3",
  "botocore.client",
  "botocore.config",
  "botocore.exceptions",
  "celery",
  "celery.exceptions",
  "celery.result",
  "datasketch",
  "bcrypt",
  "pyarrow",
  "pyarrow.parquet",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["app.tasks.*"]
disallow_untyped_decorators = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
