[project]
name = "evalledger"
version = "0.1.0"
description = "Command-line client for the EvalLedger registry"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.28.0",
  "rich>=14.0.0",
  "tomli-w>=1.2.0",
  "typer>=0.16.0",
]

[project.scripts]
evalledger = "evalledger.main:app"

[dependency-groups]
dev = [
  "mypy>=1.17.0",
  "pytest>=8.4.0",
  "ruff>=0.12.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["evalledger"]
